created and adjust some post process setting
added post tproccess package

--- a/LegoNinjaGo/Packages/manifest.json
+++ b/LegoNinjaGo/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.learn.iet-framework": "1.2.3",
     "com.unity.lego.materials": "2.2.0",
     "com.unity.lego.modelimporter": "5.0.1",
+    "com.unity.postprocessing": "3.0.3",
     "com.unity.settings-manager": "1.0.3",
     "com.unity.test-framework": "1.1.22",
     "com.unity.textmeshpro": "3.0.6",
