--- a/LegoNinjaGo/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/LegoNinjaGo/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -11,7 +11,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"D:/GameDevelopment/Projects/NinjaGo/Builds/NinjaGoSkyTemple;D:/GameDevelopment/Projects/NinjaGo/Builds/Test1;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"D:/GameDevelopment/Projects/NinjaGo/Builds/test;D:/GameDevelopment/Projects/NinjaGo/Builds/NinjaGoSkyTemple;D:/GameDevelopment/Projects/NinjaGo/Builds/Test1;;;;;;;\"}"
             }
         ]
     }
